# proxyctl

./: .gitignore  ARCHITECTURE.md  README.md  config.yaml.example  install.sh  pyproject.toml  uninstall.sh
docs/: FEATURES.md  INSTALL.md
launchdaemons/: com.mihomo.tun.plist  com.proxyctl.dns-lock.plist  com.singbox.tun.plist
lib/: __init__.py  audit.py  status.py  trace.py
lib/engine/: base.py  mihomo.py  singbox.py
scripts/: dns-watchdog  stuck-snapshot
src/proxyctl/: __init__.py  check.py  cli.py  status.py  trace.py
src/proxyctl/engine/: __init__.py
systemd/: mihomo.service  sing-box.service
