[project]
name = "proxyctl"
version = "0.1.0"
description = "Proxy configuration lifecycle management for macOS and Linux"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
proxyctl = "proxyctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxyctl"]
